include/libkrun_windows.h

/**
 * Sets the path to the kernel to be loaded in the microVM.
 *
 * NOTE: On Windows this function MUST be called before krun_start_enter().
 * There is no bundled kernel on Windows.  Use KRUN_KERNEL_FORMAT_ELF for a
 * raw ELF vmlinux image (e.g. from libkrunfw-windows or a custom build).
 *
 * Arguments:
 *  "ctx_id"        - the configuration context ID.
 *  "kernel_path"   - path to the kernel image on the host filesystem.
 *  "kernel_format" - kernel format (KRUN_KERNEL_FORMAT_* constants).
 *  "initramfs"     - path to the initramfs, or NULL if not needed.
 *  "cmdline"       - kernel command line, or NULL to use the default.
 *
 * Returns:
 *  Zero on success or a negative error number on failure.
 */
KRUN_API int32_t krun_set_kernel(uint32_t ctx_id,
                                  const char *kernel_path,
                                  uint32_t kernel_format,
                                  const char *initramfs,
                                  const char *cmdline);
/** Provides a raw EDID blob for a virtual display.  Returns -ENOTSUP without gpu. */
KRUN_API int32_t krun_display_set_edid(uint32_t ctx_id,
                                        uint32_t display_id,
                                        const uint8_t *edid_blob,
                                        size_t blob_size);
/** Sets the physical dimensions (mm) of a virtual display.  Returns -ENOTSUP without gpu. */
KRUN_API int32_t krun_display_set_physical_size(uint32_t ctx_id,
                                                 uint32_t display_id,
                                                 uint16_t width_mm,
                                                 uint16_t height_mm);
/** Sets the DPI for a virtual display.  Returns -ENOTSUP without gpu. */
KRUN_API int32_t krun_display_set_dpi(uint32_t ctx_id,
                                       uint32_t display_id,
                                       uint32_t dpi);
/* =========================================================================
 * Input devices  (stubs — return -ENOTSUP without the input feature)
 * ========================================================================= */

/** Adds an input device via vtables.  Returns -ENOTSUP without input. */
KRUN_API int32_t krun_add_input_device(uint32_t ctx_id,
                                        const void *config_backend,
                                        size_t config_backend_size,
                                        const void *event_provider_backend,
                                        size_t event_provider_backend_size);
/** Adds an input device via a file descriptor.  Returns -ENOTSUP without input. */
KRUN_API int32_t krun_add_input_device_fd(uint32_t ctx_id, int input_fd);
/* =========================================================================
 * Start
 * ========================================================================= */

/**
 * Starts and enters the microVM with the configured parameters.
 *
 * This function does not return on success; the VMM calls exit() with the
 * workload's exit code once the microVM shuts down.
 *
 * PREREQUISITE: krun_set_kernel() must have been called first on Windows.
 *
 * Arguments:
 *  "ctx_id" - the configuration context ID.
 *
 * Returns:
 *  -EINVAL if the VMM detects a configuration error before starting.
 *
 * Exit codes (from the guest init process):
 *  125 - init cannot set up the environment inside the microVM.
 *  126 - init found the executable but cannot execute it.
 *  127 - init cannot find the executable.
 */
KRUN_API int32_t krun_start_enter(uint32_t ctx_id);