krun-sys-windows/src/lib.rs


    pub fn krun_display_set_edid(
        ctx_id: u32,
        display_id: u32,
        edid_blob: *const u8,
        blob_size: usize,
    ) -> i32;

    pub fn krun_display_set_physical_size(
        ctx_id: u32,
        display_id: u32,
        width_mm: u16,
        height_mm: u16,
    ) -> i32;

    pub fn krun_display_set_dpi(
        ctx_id: u32,
        display_id: u32,
        dpi: u32,
    ) -> i32;

    // --- Input device stubs (return -ENOTSUP without the input feature) ---

    pub fn krun_add_input_device(
        ctx_id: u32,
        config_backend: *const c_void,
        config_backend_size: usize,
        event_provider_backend: *const c_void,
        event_provider_backend_size: usize,
    ) -> i32;

    pub fn krun_add_input_device_fd(ctx_id: u32, input_fd: c_int) -> i32;

    // --- Start ---

    /// Starts the microVM.  Does not return on success; calls `exit()` with
    /// the workload's exit code.  Returns `-EINVAL` if configuration is invalid.
    ///
    /// **PREREQUISITE**: `krun_set_kernel()` must have been called.
    pub fn krun_start_enter(ctx_id: u32) -> i32;
}
